# krith_vibe

./: ARCHITECTURE.md  CLAUDE.md  KIRO.md  README.md  claude_code_did_work.txt  hack-ps.txt  krith_vibe_plan.md  start.sh
backend/: .gitignore  pyproject.toml  sefs.db.bak
backend/app/: chat.py  clusterer.py  config.py  db.py  embedder.py  extractor.py  main.py  metrics.py  namer.py  pipeline.py  settings.py  sync.py  watcher.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/electron/: main.cjs
frontend/src/: App.tsx  api.ts  index.css  notifications.ts  types.ts  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
testing_nihesh/Algorithms/: UserRepository.java  api_schema.graphql  api_server.js  binary_tree.hs  calculator.swift  data_pipeline.py  data_processor.scala  data_transform.clj  database.php  file_processor.rs  generic_stack.zig  http_server.go  linked_list.c  matrix_ops.cpp  note_manager.dart  product_store.kt  task_runner.ex  todo_app.ts  vault.sol  web_scraper.rb
testing_nihesh/CSS_Sass_variables/: dashboard.scss  dashboard_styles.css  sidebar.scss  styles.css
testing_nihesh/CSS_Sass_variables_Fishing_Techniques/: FileCard.vue  app_config.xml  dashboard.html  library.xml  weather_dashboard.html
testing_nihesh/Code_Programming/: Dockerfile  Makefile  app_config.json  app_settings.yaml  deploy.sh  dotenv_example.env  file_service.proto  legacy_config.ini  project_config.toml  quickstart.bat  sample_changes.diff  sample_gitignore.txt  sample_package.json  schema.sql  setup.ps1  (+3 more)
(+13 files in other folders)
